--- a/configs/tmux/tmux.conf
+++ b/configs/tmux/tmux.conf
@@ -5,6 +5,7 @@ set -g prefix C-s
 bind C-s send-prefix
 # Windows and panes start at 1 instead of 0
 bind g new-window -c "#{pane_current_path}" "lazygit"
+bind G new-window -c "#{pane_current_path}" "lazydocker"
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
@@ -25,7 +26,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 bind C-l send-keys 'C-l'
-#bind-key h run-shell "~/shz_utils/mysh.sh"
+bind-key h run-shell "~/.config/scripts/project-opener.sh"
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
 set -g @catppuccin_window_text "#W"
@@ -37,3 +38,4 @@ set -ag status-right "#{E:@catppuccin_status_session}"
 set -ag status-right "#{E:@catppuccin_status_uptime}"
 set -ag status-right "#{E:@catppuccin_status_gitmux}"
 run '~/.tmux/plugins/tpm/tpm'
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
